# embedding-inspector

./: README.md  pyproject.toml
examples/: vectors.json  vectors.npy  vectors_with_meta.npz
src/embedding_inspector/: __init__.py  __main__.py  analyzer.py  cli.py  loader.py
